<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_bg"
    tools:context=".auth.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <ImageButton
            android:id="@+id/helpbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/question" />

        <ImageView
            android:id="@+id/ivlogo"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginTop="108dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivlogo">

            <TextView
                android:id="@+id/ltvrperror"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="record not found"
                android:textColor="@color/error"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/portal_number"
                android:textColor="@color/edit_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtPortal"
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:background="@drawable/edit_text_design"
                android:hint="@string/enter_portal_number"
                android:imeOptions="actionNext"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/edit_text"
                android:textColorHint="@color/edit_text_hint"
                android:textCursorDrawable="@drawable/edit_text_cursor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"
                android:text="@string/email"
                android:textColor="@color/edit_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:background="@drawable/edit_text_design"
                android:hint="@string/enter_your_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/edit_text"
                android:textColorHint="@color/edit_text_hint"
                android:textCursorDrawable="@drawable/edit_text_cursor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"
                android:text="@string/password"
                android:textColor="@color/edit_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:background="@drawable/edit_text_design"
                android:hint="@string/enter_your_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/edit_text"
                android:textColorHint="@color/edit_text_hint"
                android:textCursorDrawable="@drawable/edit_text_cursor" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp">

                <CheckBox
                    android:id="@+id/remember"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/checkbox_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/remember"
                    android:paddingLeft="5dp"
                    android:paddingTop="8dp"
                    android:paddingRight="4dp"
                    android:text="@string/remember_me"
                    android:textColor="@color/edit_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:autoLink="all"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/forgot_your_password"
                    android:textColor="@color/edit_text_heading"
                    android:textColorHighlight="@color/edit_text_heading"
                    android:textColorLink="@color/edit_text_heading"
                    android:textSize="14sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/btnLogin"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="108dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded_corners"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@color/button_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>