<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_bg"
    tools:context=".auth.ResetActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/llr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="28dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/tvrperror"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="record not found"
                android:textColor="@color/error"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvrpr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reset_password_request"
                android:textColor="@color/edit_text_heading"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tveyp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/enter_your_email_address_to_request_a_password_reset"
                android:textColor="@color/edit_text"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:text="@string/portal_number"
                android:textColor="@color/edit_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtPortal"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edit_text_design"
                android:hint="@string/enter_portal_number"
                android:imeOptions="actionNext"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/edit_text"
                android:textColorHint="@color/edit_text_hint"
                android:textCursorDrawable="@drawable/edit_text_cursor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"
                android:text="@string/email"
                android:textColor="@color/edit_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edit_text_design"
                android:hint="@string/e_g_john_example_com"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/edit_text"
                android:textColorHint="@color/edit_text_hint"
                android:textCursorDrawable="@drawable/edit_text_cursor" />

            <TextView
                android:id="@+id/tvReturnToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoLink="all"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/return_to_login"
                android:textColor="@color/edit_text_heading"
                android:textColorHighlight="@color/edit_text_heading"
                android:textColorLink="@color/edit_text_heading"
                android:textSize="16sp" />


            <Button
                android:id="@+id/btnSend"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="108dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded_corners"
                android:text="Send"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@color/button_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llrs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="28dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/tvemailsent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="Email has been sent!"
                android:textColor="@color/edit_text_heading"
                android:textColorHighlight="@color/edit_text_heading"
                android:textColorLink="@color/edit_text_heading"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvemailsentdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="Please check your inbox and click reset password link."
                android:textColor="@color/edit_text"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                app:srcCompat="@drawable/send_success" />

            <Button
                android:id="@+id/btnRetrunToLogin"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="108dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded_corners"
                android:text="Return to Login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@color/button_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>